<resources>
    <string name="app_name">EducationalGame</string>
    <string name="select_topic">Choose Topic</string>
    <string name="english_quiz">English Quiz</string>
    <string name="start_quiz">Start Quiz</string>
    <string name="waiting">Waiting…</string>
    <string name="math_quiz">Math Quiz</string>
    <string name="incorrect">Incorrect:</string>
    <string name="correct">Correct:</string>
    <string name="congratulation">You did it! You completed it!</string>
    <string name="selected_topic">Your Selected Topic is:</string>
    <string name="time">00:00</string>
    <string name="question_num">1/10</string>
    <string name="question_details">Question Details</string>
    <string name="option_1">Option 1</string>
    <string name="option_2">Option 2</string>
    <string name="option_3">Option 3</string>
    <string name="option_4">Option 4</string>
    <string name="next_question">Next Question</string>
    <string name="change_difficulty">Change Quiz Difficulty</string>
    <string name="difficulty">Difficulty</string>
    <string name="medium">Medium</string>
    <string name="easy">Easy</string>
    <string name="degree_of_difficulty">Choose Degree in Setting (Draft: EZ)</string>
</resources>