<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/cl_bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".GameActivity">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/deepSkyBlue">

            <ImageView
                android:id="@+id/backBtn"
                android:layout_width="30sp"
                android:layout_height="30sp"
                android:layout_centerVertical="true"
                android:layout_marginStart="15dp"
                android:src="@drawable/ic_back_btn" />

            <TextView
                android:id="@+id/selectedName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/selected_topic"
                android:textColor="@color/clTitle"
                android:textSize="28sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="15dp"
                    android:src="@drawable/ic_clock" />

                <TextView
                    android:id="@+id/displayTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/time"
                    android:textColor="@color/clTitle" />
            </LinearLayout>
        </RelativeLayout>

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/ic_study"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/questionNum"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:background="@drawable/cl_white_text_box"
            android:elevation="1dp"
            android:gravity="center"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:text="@string/question_num"
            android:textColor="@color/clText" />

        <TextView
            android:id="@+id/questionDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/cl_blue_text_box"
            android:gravity="center"
            android:minHeight="50dp"
            android:padding="20dp"
            android:text="@string/question_details"
            android:textColor="@color/clText"
            android:textSize="16sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/option_1"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/cl_white_text_box"
            android:text="@string/option_1"
            android:textAllCaps="false"
            android:textColor="@color/clText"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/option_2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/cl_white_text_box"
            android:text="@string/option_2"
            android:textAllCaps="false"
            android:textColor="@color/clText"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/option_3"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/cl_white_text_box"
            android:text="@string/option_3"
            android:textAllCaps="false"
            android:textColor="@color/clText"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/option_4"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/cl_white_text_box"
            android:text="@string/option_4"
            android:textAllCaps="false"
            android:textColor="@color/clText"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/nextBtn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/cl_blue_text_box"
            android:text="@string/next_question"
            android:textAllCaps="false"
            android:textSize="24sp"
            android:textColor="@color/clText"
            android:textStyle="bold" />

    </LinearLayout>

</ScrollView>