<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/cl_bg"
    tools:context=".SettingActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".GameActivity">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/deepSkyBlue">

            <ImageView
                android:id="@+id/backBtnSetting"
                android:layout_width="30sp"
                android:layout_height="30sp"
                android:layout_centerVertical="true"
                android:layout_marginStart="15dp"
                android:src="@drawable/ic_back_btn" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/change_difficulty"
                android:textColor="@color/clTitle"
                android:textSize="28sp"
                android:textStyle="bold" />
        </RelativeLayout>
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/easy"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/medium"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:background="@drawable/cl_blue_text_box"
        android:text="@string/easy"
        android:textColor="@color/clText"
        android:textSize="22sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/medium"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_margin="10dp"
        android:background="@drawable/cl_blue_text_box"
        android:text="@string/medium"
        android:textColor="@color/clText"
        android:textSize="22sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/difficulty"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/medium"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:background="@drawable/cl_blue_text_box"
        android:text="@string/difficulty"
        android:textColor="@color/clText"
        android:textSize="22sp" />

</RelativeLayout>